[package]
name = "dspa-anomalies"
version = "0.1.0"
authors = ["Sven Knobloch <sven98@me.com>"]
edition = "2018"

[dependencies]
bincode = "^1"
chrono = "~0"
diesel = { version = "^1", features = [ "chrono", "r2d2" ] }
lazy_static = "^1"
num_cpus = "^1"
r2d2 = "~0"
regex = "^1"
serde = "^1"
serde_derive = "^1"
structopt = "~0"
timely = { version = "~0", features = [ "bincode" ] }
zmq = "~0"

dspa-lib = { path = "../dspa-lib/" }

[lib]
name = "dspa_anomalies"
path = "src/lib.rs"

[[bin]]
name = "dspa-anomalies"
path = "src/main.rs"