[package]
name = "dspa-lib"
version = "0.1.0"
authors = ["Sven Knobloch <sven98@me.com>"]
edition = "2018"

[dependencies]
bincode = "^1"
chrono = { version = "~0.4.0", features = [ "serde" ] }
csv = "^1"
diesel = { version = "^1", features = [ "postgres" ] }
either = "^1"
r2d2 = "~0"
regex = "^1"
serde = "^1"
serde_derive = "^1"
threadpool = "^1"
timely = { version = "~0", features = [ "bincode" ] }
zmq = "~0"