[package]
name = "dspa-source"
version = "0.1.0"
authors = ["Sven Knobloch <sven98@me.com>"]
edition = "2018"

[dependencies]
bincode = "^1"
chrono = { version = "~0.4.0", features = [ "serde" ] }
csv = "^1"
diesel = { version = "^1", features = [ "chrono", "r2d2" ] }
itertools = "~0"
lazy_static = "^1"
num_cpus = "^1"
rand = "~0"
rayon = "^1"
regex = "^1"
r2d2 = "~0"
serde = "^1"
serde_derive = "^1"
structopt = "~0"
timely = "~0"
zmq = "~0"

dspa-lib = { path = "../dspa-lib/" }

[[bin]]
name = "dspa-source"
path = "src/main.rs"